--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -34,7 +34,7 @@
                             Login
                         </button>
                         <div class="text-center pt-2">
-                            <p class="my-1"> Don't have an account? please <a href="#" style="text-decoration: none;">Registration</a></p>
+                            <p class="my-1"> Don't have an account? please <a href="{% url 'registration' %}" style="text-decoration: none;">Registration</a></p>
                             <p class="my-1"><a href="#" style="text-decoration: none;">Forger Password</a></p>
                         </div>
                     </form>
