--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">Home</a>
         <div class="btn-group mt-auto">
-            <button type="button" class="btn btn-danger">...</button>
+            <button type="button" class="btn btn-danger">☰</button>
             <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
@@ -78,7 +78,7 @@
                 <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/s.a.z.z.a.d_rahman/?hl=en" target="_blank"><i class="fa-brands fa-instagram" style="color: #E1306C;"></i></a>
                 <small>
-                    || Developed by <strong>Sazzad</strong>
+                     ‖  Developed by <strong>Sazzad</strong>
                 </small>
             </div>
 
