--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -18,6 +18,9 @@
                     <form method="POST" action="" novalidate>
                         {% csrf_token %}
                         <div class="form-group my-2">
+                            {% include './messages.html' %}
+                        </div>
+                        <div class="form-group my-2">
                             <div class="mb-2">
                                 <label for="{{form.username.id_for_label}}" class="form-label">Username or Email</label>
                                 {{form.username}}
@@ -34,8 +37,9 @@
                             Login
                         </button>
                         <div class="text-center pt-2">
-                            <p class="my-1"> Don't have an account? please <a href="{% url 'registration' %}" style="text-decoration: none;">Registration</a></p>
-                            <p class="my-1"><a href="#" style="text-decoration: none;">Forger Password</a></p>
+                            <p class="my-0"> Don't have an account? please <a href="{% url 'registration' %}" style="text-decoration: none;">Registration</a></p>
+                            <p>――――――― or ―――――――</p>
+                            <p class="my-0"><a href="#" style="text-decoration: none;">Forget Password</a></p>
                         </div>
                     </form>
                 </div>
