--- a/templates/account/registration.html
+++ b/templates/account/registration.html
@@ -1,7 +1,7 @@
 {% extends '../base.html' %}
 {% load static %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Registration{% endblock title %}
 
 {% block content %}
 
