password change logic

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -15,8 +15,7 @@
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Change Password</a></li>
+                <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
                 <li>
                     <hr class="dropdown-divider">
                 </li>
