--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,7 +1,7 @@
 {% extends '../base.html' %}
 {% load static %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Password Reset{% endblock title %}
 
 {% block content %}
 
@@ -13,7 +13,7 @@
             <div class="col-11 col-sm-8 col-md-6 col-lg-4">
 
                 <div class="card shadow-lg rounded-2 p-4">
-                    <h3 class="text-center mb-4">Login</h3>
+                    <h3 class="text-center mb-4">Password Reset</h3>
 
                     <form method="POST" action="" novalidate>
                         {% csrf_token %}
@@ -22,25 +22,14 @@
                         </div>
                         <div class="form-group my-2">
                             <div class="mb-2">
-                                <label for="{{form.username.id_for_label}}" class="form-label">Username or Email</label>
+                                <label for="{{form.username.id_for_label}}" class="form-label">Username</label>
                                 {{form.username}}
                                 {{form.username.errors}}
                             </div>
-
-                            <div class="from-group mb-2">
-                                <label class="form-label" for="password">Password</label>
-                                {{form.password}}
-                                {{form.password.errors}}
-                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">
-                            Login
+                            Reset
                         </button>
-                        <div class="text-center pt-2">
-                            <p class="my-0"> Don't have an account? please <a href="{% url 'registration' %}" style="text-decoration: none;">Registration</a></p>
-                            <p>――――――― or ―――――――</p>
-                            <p class="my-0"><a href="{% url 'password_reset' %}" style="text-decoration: none;">Forget Password</a></p>
-                        </div>
                     </form>
                 </div>
             </div>
